# advent-of-code

./: .gitignore  0.xpm  1.xpm  README.md  day10.py  day11.py  day11b.py  day12.py  day12b.py  day13.py  day13b.py  day14.py  day14b.py  day15.py  day15b.py  day16.py  day16b.py  day16c.py  day17.py  day18.py  day18b.py  day19-trace.txt  day19.py  day19b.py  day2.py  day20-map.txt  day20.py  day21.cpp  day21.py  day21.txt  day21b.py  day22.py  day22b.cpp  day22c.cpp  day23.py  day23b.py  day24.py  day24b.py  day25.py  day3.py  (+12 more)
2015/: 01.bas  02.bas  03.bas  04.py  05.bas  06.bas  06_vis.bas  07.bas  08.bas  09.js  09.test.js  10.js  10.test.js  11.js  11.test.js  12.js  12.test.js  13.js  13.test.js  14.js  14.test.js  15.js  15.test.js  16.js  16.test.js  17.js  17.test.js  18.test.js  18.ts  19.py  20.py  2015-09.js  2015-10.js  2015-11.js  2015-12.js  21.py  22.py  23.py  24.py  25.py  (+4 more)
2016/: 24.py  Cargo.toml  README.md
2016/aoc/: test_input.py
2016/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.py  10.rs  11.py  11.rs  12.md  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.md  23.py  24.rs  25.md
2016/src/aoclib/: modular.rs
2017/: 01.fs  01a.py  01b.py  01py.txt  02.fs  02a.py  03.fs  04.fs  05.fs  06.fs  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.cpp  15.py  16.py  17.py  18.py  19.py  20.py  2017.fsproj  README.md  aoc2017.fs  knot_hash.py
2018-old/: 2.xpm  day10.py  day11.py  day14.py  day14b.py  day15.py  day16.py  day16b.py  day16c.py  day17.py  day18b.py  day19b.py  day21.txt  (+9 more)
pyaoc/: LICENSE  pyproject.toml
pyaoc/pyaoc/: __init__.py  env.py  grid.py  input.py  modular.py  newday.py  test_env.py  test_grid.py  test_input.py  test_integers.py  test_modular.py
(+345 files in other folders)
